--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Mini Message Board",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "watch": "node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
